Added scroll view functionality, so the app is compatible with smaller screen devices. Screen orientation is now also locked to only portrait mode.

--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Memorizer">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,14 +18,20 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NumberMemoryActivity"/>
-        <activity android:name=".NumberGameOver"/>
+        <activity android:name=".NumberMemoryActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".NumberGameOver"
+            android:screenOrientation="portrait"/>
         
-        <activity android:name=".SequenceActivity"/>
-        <activity android:name=".SequenceGameOver"/>
+        <activity android:name=".SequenceActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SequenceGameOver"
+            android:screenOrientation="portrait"/>
         
-        <activity android:name=".VisualMemoryActivity"/>
-        <activity android:name=".VisualGameOver"/>
+        <activity android:name=".VisualMemoryActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".VisualGameOver"
+            android:screenOrientation="portrait"/>
 
     </application>
 
