--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".numberMemoryGame.NumberMemoryActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".numberMemoryGame.NumberMemoryActivity"/>
         <activity android:name=".numberMemoryGame.NumberGameOver"/>
 
         <activity android:name=".sequenceMemoryGame.SequenceActivity"/>
         <activity android:name=".sequenceMemoryGame.SequenceGameOver"/>
+        <activity android:name=".sequenceMemoryGame.SequenceGame" />
         
         <activity android:name=".visualMemoryGame.VisualMemoryActivity"/>
         <activity android:name=".visualMemoryGame.VisualGameOver"/>
