--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".visualMemoryGame.VisualMemoryActivity"/>
         <activity android:name=".visualMemoryGame.VisualGameOver"/>
         <activity android:name=".numberMemoryGame.NumberGame"/>
-
+        <activity android:name=".visualMemoryGame.VisualMemoryGame"/>
     </application>
 
 </manifest>
