--- a/Memorizer/app/build.gradle
+++ b/Memorizer/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.firebase:firebase-client-android:2.5.0'
 }
