Fixed some database issues and added static variables to games

--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Statistics" />
 
         <activity android:name=".numberMemoryGame.NumberMemoryActivity"/>
         <activity android:name=".numberMemoryGame.NumberGameOver"
