--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -8,30 +8,51 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
-        android:screenOrientation="portrait">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Statistics" />
+        <activity
+            android:name=".Statistics"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".numberMemoryGame.NumberMemoryActivity"/>
-        <activity android:name=".numberMemoryGame.NumberGameOver"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity
+            android:name=".numberMemoryGame.NumberMemoryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".numberMemoryGame.NumberGameOver"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name=".numberMemoryGame.NumberGame"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".sequenceMemoryGame.SequenceActivity"/>
-        <activity android:name=".sequenceMemoryGame.SequenceGameOver"/>
-        <activity android:name=".sequenceMemoryGame.SequenceGame" />
-        
-        <activity android:name=".visualMemoryGame.VisualMemoryActivity"/>
-        <activity android:name=".visualMemoryGame.VisualGameOver"/>
-        <activity android:name=".numberMemoryGame.NumberGame"/>
-        <activity android:name=".visualMemoryGame.VisualMemoryGame"/>
+        <activity
+            android:name=".sequenceMemoryGame.SequenceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".sequenceMemoryGame.SequenceGameOver"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".sequenceMemoryGame.SequenceGame"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".visualMemoryGame.VisualMemoryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".visualMemoryGame.VisualGameOver"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".visualMemoryGame.VisualMemoryGame"
+            android:screenOrientation="portrait" />
 
     </application>
 
