Added Verbal Memory Game v1

--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -53,6 +53,17 @@
         <activity
             android:name=".visualMemoryGame.VisualMemoryGame"
             android:screenOrientation="portrait" />
+        <activity
+
+            android:name=".verbalMemoryGame.VerbalMemoryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".verbalMemoryGame.VerbalGameOver"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".verbalMemoryGame.VerbalMemoryGame"
+            android:screenOrientation="portrait" />
+
 
     </application>
 
