--- a/Memorizer/app/src/main/AndroidManifest.xml
+++ b/Memorizer/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".sequenceMemoryGame.SequenceGameOver"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".sequenceMemoryGame.SequenceGame"
             android:screenOrientation="portrait" />
@@ -49,7 +50,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".visualMemoryGame.VisualGameOver"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".visualMemoryGame.VisualMemoryGame"
             android:screenOrientation="portrait" />
@@ -59,7 +61,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".verbalMemoryGame.VerbalGameOver"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".verbalMemoryGame.VerbalMemoryGame"
             android:screenOrientation="portrait" />
